chore: fix input box spacing

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -84,7 +84,6 @@ button
   .input-box
     display: flex
     flex-direction: column
-    justify-content: space-between
     gap: 8px
 
     label
